[2008-0-] 0.9.4 / 1.0.0 ?
+ API: Added Dwoo_Compilation_Exception methods getCompiler() and
  getTemplate() so you can catch the exception and use those to build a nicer
  error view with all the details you want
* Fixed compiler bug that created a parse error when you had comments in an
  extended template
* Fixed extends bug when extending files in other directories using relative
  paths
* Fixed parsing bug with |modifier:param|modifier2} with:colon after it
* Bug fixed with smarty functions called with no parameters (in compat mode)
* Fixed Dwoo::isArray() check, objects implementing ArrayAccess are now
  valid (thanks to Daniel Cousineau for the patch)
* Fixed compiler warning when doing {func()->method()} or {func()->property}
* Fixed compiled/cached files being written in the wrong place when the path
  to the template contains "../"s
* Fixed {if} failing with conditions using upper case operators (i.e. AND)

[2008-08-03] 0.9.3
+ Adapters: Added the ZendFramework interface for Dwoo
  (see /Dwoo/Adapters/ZendFramework/README)
+ Plugins: Added the {a} block plugin to generate <a> tags
+ Syntax: Added the ";" token that allows to group multiple instructions in one
  single template tag, example: {if $foo; "> $foo";$bar;/} is equal to:
  {if $foo}> {$foo}{$bar}{/} - This also allow block operations such as:
  {a http://url.com; "Text" /} which equals to {a http://url.com}Text{/}
+ Syntax: Block plugins that you want to call without content can be
  self-closed just like XML tags (e.g. {a "http://url.com" /} ). Be careful not
  to close a non-block plugin like that however, since it will close it's
  parent block
+ Syntax: Static methods can be called using {Class::method()}
+ Syntax: It is now possible to use a plugin's result as an object and call
  a method or read a property from it, i.e. {fetchObject()->doStuff()}
+ API: Added Dwoo_Plugin::paramsToAttributes() utility function to help
  with the creation of compilable xml/html-related plugins