@@ -27,11 +27,11 @@ final class Dwoo_Plugin_topLevelBlock extends Dwoo_Block_Plugin implements Dwoo_
 
 	public static function preProcessing(Dwoo_Compiler $compiler, array $params, $prepend, $append, $type)
 	{
-		return 'ob_start(); '.Dwoo_Compiler::PHP_CLOSE;
+		return 'ob_start(); /* template body */ '.Dwoo_Compiler::PHP_CLOSE;
 	}
 
 	public static function postProcessing(Dwoo_Compiler $compiler, array $params, $prepend, $append, $content)
 	{
-		return $content . Dwoo_Compiler::PHP_OPEN.'return $this->buffer . ob_get_clean();';
+		return $content . Dwoo_Compiler::PHP_OPEN.' /* end template body */'."\n".'return $this->buffer . ob_get_clean();';
 	}
 }
