@@ -2,6 +2,8 @@
 + API: Added Dwoo_Compilation_Exception methods getCompiler() and
   getTemplate() so you can catch the exception and use those to build a nicer
   error view with all the details you want
+* The Compiler now ensures that a template starting with <?xml will not
+  conflict with php using the short_open_tag=On setting
 * Fixed compiler bug that created a parse error when you had comments in an
   extended template
 * Fixed extends bug when extending files in other directories using relative
